cabal-version: 3.0

name:         via-fields
version:      0.1.0.0
synopsis:     A GHC plugin that provides a proof of concept for Via Fields
description:  Please see the README on GitHub at <https://github.com/ElderEphemera/via-fields#readme>
category:     Compiler Plugin
homepage:     https://github.com/ElderEphemera/via-fields#readme
bug-reports:  https://github.com/ElderEphemera/via-fields/issues
author:       Joshua Price
maintainer:   elderephemera@gmail.com
copyright:    Copyright (c) 2021, Joshua Price
license:      BSD-3-Clause
license-file: LICENSE
build-type:   Simple
extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/ElderEphemera/via-fields

library
  exposed-modules:
    ViaFields
    ViaFields.Util
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends:
    base >= 4.14.0 && < 4.17,
    ghc >= 8.10.1 && < 9.3,
    ghc-boot-th >= 8.10.1 && < 9.3,
    syb >= 0.7.2 && < 0.8,
  default-language: Haskell2010

test-suite via-fields-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options: -Wall
  build-depends:
    base >= 4.14.0 && < 4.17,
    via-fields,
  default-language: Haskell2010
